# curve-accounting

./: README.md  main.py  pyproject.toml
curve/: get_mails.py
curve/mail_parsers/: non_specific_dates.py  specific_dates.py
notion/: add_relation.py  cache.py  check_notion_db_record_exists.py  create_notion_db_record.py  create_notion_page.py  find_relation.py
