[tool.poetry]
name = "curve-accounting"
version = "0.1.0"
description = ""
authors = ["Arash Farzaneh Taleghani <arashfataw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
babel = "^2.17.0"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
notion-client = "^2.3.0"
cachetools = "^5.5.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
